// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post-log-viewer-saved-search should create a saved search 1`] = `
{
  "content": [
    {
      "text": "{"success":true}",
      "type": "text",
    },
  ],
}
`;

exports[`post-log-viewer-saved-search should create a saved search with complex query 1`] = `
{
  "content": [
    {
      "text": "{"success":true}",
      "type": "text",
    },
  ],
}
`;

exports[`post-log-viewer-saved-search should handle existing saved search 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 400",
      "type": "text",
    },
  ],
}
`;
